--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,8 +1,10 @@
 <resources>
-    <string name="app_name">Laiks</string>
+    <string name="app_name">Delayed Time</string>
     <string name="back_button">Back to start</string>
     <string name="hour_plus_button">Hour Up</string>
     <string name="hour_minus_button">Hour Down</string>
-    <string name="minutes_separator">:</string>
+    <string name="minutes_separator" translatable="false">:</string>
     <string name="login_button">Login</string>
+    <string name="show_prices_button">ShowPrices</string>
+    <string name="prices_screen">Prices</string>
 </resources>
