--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,6 +7,9 @@
     <string name="login_button">Login</string>
     <string name="show_prices_button">ShowPrices</string>
     <string name="prices_screen">Prices</string>
-    <string name="loading">Loading...</string>
+    <string name="loading">Loading&#8230;</string>
     <string name="loading_failed">Loading failed!</string>
+    <string name="login_menu_item">Login</string>
+    <string name="logout_menu_item">Logout</string>
+    <string name="include_vat">Include VAT</string>
 </resources>
