--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,4 +12,7 @@
     <string name="login_menu_item">Login</string>
     <string name="logout_menu_item">Logout</string>
     <string name="include_vat">Include VAT</string>
+    <string name="users_screen">Users</string>
+    <string name="users_menu">Edit Users</string>
+    <string name="user_editor">User Setup</string>
 </resources>
