--- a/app/src/main/res/values-lv/strings.xml
+++ b/app/src/main/res/values-lv/strings.xml
@@ -15,4 +15,8 @@
     <string name="users_screen">Lietotāji</string>
     <string name="users_menu">Lietotāji</string>
     <string name="user_editor">Lietotāja iestatījumi</string>
+    <string name="np_allowed_checkbox">Ir pieeja elektrības cenām</string>
+    <string name="is_admin_checkbox">Administratora tiesības</string>
+    <string name="alert_ok">Apstiprināt</string>
+    <string name="alert_dismiss">Atcelt</string>
 </resources>
