--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,4 +15,8 @@
     <string name="users_screen">Users</string>
     <string name="users_menu">Edit Users</string>
     <string name="user_editor">User Setup</string>
+    <string name="np_allowed_checkbox">Allowed access to utility prices</string>
+    <string name="is_admin_checkbox">Administrator</string>
+    <string name="alert_ok">Confirm</string>
+    <string name="alert_dismiss">Dismiss</string>
 </resources>
