--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,4 +19,8 @@
     <string name="is_admin_checkbox">Administrator</string>
     <string name="alert_ok">Confirm</string>
     <string name="alert_dismiss">Dismiss</string>
+    <string name="delete_button">Delete</string>
+    <string name="appliance_delete_confirmation">Do you really want to delete appliance named "%1$s"? This action can\'t be undone!</string>
+    <string name="appliances_screen">Appliances</string>
+    <string name="appliance_screen">Appliance</string>
 </resources>
