--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -25,4 +25,12 @@
     <string name="appliance_screen">Appliance</string>
     <string name="appliances_menu_item">Edit Appliances</string>
     <string name="settings">Settings</string>
+    <string name="appliance_name_label">Name</string>
+    <string name="appliance_minimumDelay_label">Minimum delay</string>
+    <string name="appliance_enabled_label">Enabled</string>
+    <string name="appliance_delay_label">Delay on</string>
+    <string name="appliance_delay_start_label">Start</string>
+    <string name="appliance_delay_end_label">End</string>
+    <string name="appliance_cycles_label">Power consumption cycles</string>
+    <string name="appliance_color_label">Background color</string>
 </resources>
