--- a/app/src/main/res/values-lv/strings.xml
+++ b/app/src/main/res/values-lv/strings.xml
@@ -28,6 +28,7 @@
     <string name="appliance_name_label">Nosaukums</string>
     <string name="appliance_minimumDelay_label">Mazākais laiks</string>
     <string name="appliance_enabled_label">Rādīt izdevīgāko laiku</string>
+    <string name="appliance_enabled_check">Aktīvs</string>
     <string name="appliance_delay_label">Atliktais laiks norāda cikla</string>
     <string name="appliance_delay_start_label">sākumu</string>
     <string name="appliance_delay_end_label">beigas</string>
