--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -34,4 +34,8 @@
     <string name="appliance_delay_end_label">End</string>
     <string name="appliance_cycles_label">Power consumption cycles</string>
     <string name="appliance_color_label">Background color</string>
+    <string name="units_minutes" translatable="false">min</string>
+    <string name="units_watts" translatable="false">W</string>
+    <string name="add">Add</string>
+    <string name="remove">Remove</string>
 </resources>
