--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -37,5 +37,8 @@
     <string name="units_minutes" translatable="false">min</string>
     <string name="units_watts" translatable="false">W</string>
     <string name="add">Add</string>
+    <string name="edit">Edit</string>
     <string name="remove">Remove</string>
+    <string name="action_cancel">Cancel</string>
+    <string name="action_save">Save</string>
 </resources>
