--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -38,6 +38,7 @@
     <string name="units_watts" translatable="false">W</string>
     <string name="add">Add</string>
     <string name="edit">Edit</string>
+    <string name="copy">Copy</string>
     <string name="remove">Remove</string>
     <string name="action_cancel">Cancel</string>
     <string name="action_save">Save</string>
