--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,6 +17,7 @@
     <string name="user_editor">User Setup</string>
     <string name="np_allowed_checkbox">Allowed access to utility prices</string>
     <string name="is_admin_checkbox">Administrator</string>
+    <string name="np_upload_allowed_checkbox">Can update utility prices</string>
     <string name="alert_ok">Confirm</string>
     <string name="alert_dismiss">Dismiss</string>
     <string name="delete_button">Delete</string>
