--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -43,4 +43,5 @@
     <string name="remove">Remove</string>
     <string name="action_cancel">Cancel</string>
     <string name="action_save">Save</string>
+    <string name="generic_error">Error!</string>
 </resources>
