--- a/app/src/main/res/values-lv/strings.xml
+++ b/app/src/main/res/values-lv/strings.xml
@@ -42,4 +42,9 @@
     <string name="edit">Labot</string>
     <string name="np_upload_allowed_checkbox">Tiesības atjaunot cenas</string>
     <string name="generic_error">Radusies kļūda!</string>
+    <plurals name="prices_retrieved">
+        <item quantity="one">%d ieraksts pievienots</item>
+        <item quantity="zero">%d ierakstu pievienoti</item>
+        <item quantity="other">%d ieraksti pievienoti</item>
+    </plurals>
 </resources>
