--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -45,6 +45,7 @@
     <string name="action_save">Save</string>
     <string name="generic_error">Error!</string>
     <string name="load_np_data">Update prices</string>
+    <string name="retrieving_prices">Looking for new records on server</string>
     <plurals name="prices_retrieved">
         <item quantity="one">%1$d price retrieved</item>
         <item quantity="other">%1$d prices retrieved</item>
