--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,6 +15,7 @@
     <string name="users_screen">Users</string>
     <string name="users_menu">Edit Users</string>
     <string name="user_editor">User Setup</string>
+    <string name="user_not_found">User "%1$s" not found in database!</string>
     <string name="np_allowed_checkbox">Allowed access to utility prices</string>
     <string name="is_admin_checkbox">Administrator</string>
     <string name="np_upload_allowed_checkbox">Can update utility prices</string>
