drag handle added to appliance

--- a/app/src/main/res/values-lv/strings.xml
+++ b/app/src/main/res/values-lv/strings.xml
@@ -53,4 +53,5 @@
     <string name="market_zone_name">Cenu reģions</string>
     <string name="vat_amount">PVN likme</string>
     <string name="market_zone_select">Izvēlieties reģionu</string>
+    <string name="drag_handle">Pārvietot</string>
 </resources>
