appliances view model changed

--- a/app/src/main/res/values-lv/strings.xml
+++ b/app/src/main/res/values-lv/strings.xml
@@ -54,4 +54,5 @@
     <string name="vat_amount">PVN likme</string>
     <string name="market_zone_select">Izvēlieties reģionu</string>
     <string name="drag_handle">Pārvietot</string>
+    <string name="view_appliance">Skatīt iekārtu</string>
 </resources>
