--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -52,6 +52,8 @@
     <string name="market_zone_select">Choose region</string>
     <string name="drag_handle">Drag</string>
     <string name="view_appliance">View Appliance</string>
+    <string name="create_new">Create New</string>
+    <string name="choose_appliance_title">Choose Appliance!</string>
     <plurals name="prices_retrieved">
         <item quantity="one">%1$d price retrieved</item>
         <item quantity="other">%1$d prices retrieved</item>
