--- a/app/src/main/res/values-lv/strings.xml
+++ b/app/src/main/res/values-lv/strings.xml
@@ -57,4 +57,6 @@
     <string name="view_appliance">Skatīt iekārtu</string>
     <string name="create_new">Izveidot jaunu</string>
     <string name="choose_appliance_title">Izvēlieties aparātu!</string>
+    <string name="user_defined">Lietotāja</string>
+    <string name="predefined">Sistēmas</string>
 </resources>
