--- a/app/src/main/res/values-lv/strings.xml
+++ b/app/src/main/res/values-lv/strings.xml
@@ -11,6 +11,7 @@
     <string name="loading_failed">Kaut kas nogāja greizi</string>
     <string name="login_menu_item">Pieslēgties</string>
     <string name="logout_menu_item">Atslēgties</string>
+    <string name="expand_user_menu_button">Atvērt lietotāja izvēlni</string>
     <string name="include_vat">PVN iekļauts</string>
     <string name="users_screen">Lietotāji</string>
     <string name="users_menu">Lietotāji</string>
@@ -59,4 +60,5 @@
     <string name="choose_appliance_title">Izvēlieties aparātu!</string>
     <string name="user_defined">Lietotāja</string>
     <string name="predefined">No gatavajiem</string>
+    <string name="appliance_color_selection_dialog_open">Atvērt aparāta izceltās krāsas izvēlni</string>
 </resources>
