--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,6 +20,10 @@
     <string name="email_input_label">e-mail</string>
     <string name="password_input_label">Password</string>
     <string name="password_visibility">Password visibility</string>
+    <string name="password_reset_screen_title">Reset Password</string>
+    <string name="password_reset_button">Send reset e-mail</string>
+    <string name="password_reset_email_sent">Password reset link sent to "%1$s"</string>
+    <string name="navigate_to_password_reset">Password forgotten?</string>
     <string name="logout_menu_item">Logout</string>
     <string name="expand_user_menu_button">Open user menu</string>
     <string name="include_vat">Include VAT</string>
