--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,13 +16,22 @@
     <string name="login_success">Login successful!</string>
     <string name="login_fail">Login failed</string>
     <string name="email_input_error">Email not valid</string>
-    <string name="password_input_error">Password not valid</string>
+    <string name="email_not_verified">Email not verified. Check your inbox and perform required actions!</string>
     <string name="email_input_label">e-mail</string>
     <string name="password_input_label">Password</string>
+    <string name="password_input_error">Password must contain upper and lower case letters and numbers</string>
+    <string name="password_repeat_not_matching">Passwords should match</string>
+    <string name="password_repeat_input_label">Repeat your password</string>
     <string name="password_visibility">Password visibility</string>
     <string name="password_reset_screen_title">Reset Password</string>
     <string name="password_reset_button">Send reset e-mail</string>
     <string name="password_reset_email_sent">Password reset link sent to "%1$s"</string>
+    <string name="user_registration_title">Register with email</string>
+    <string name="user_registered">New user created. e-mail confirmation link sent to "%1$s"</string>
+    <string name="user_registration_action_button">Register!</string>
+    <string name="login_register_with_email">Register with e-mail</string>
+    <string name="display_name_input_label">Your name</string>
+    <string name="display_name_input_error">Name must be provided</string>
     <string name="navigate_to_password_reset">Password forgotten?</string>
     <string name="logout_menu_item">Logout</string>
     <string name="expand_user_menu_button">Open user menu</string>
