--- a/app/src/main/res/values-lv/strings.xml
+++ b/app/src/main/res/values-lv/strings.xml
@@ -84,4 +84,5 @@
     <string name="email_not_verified">Lietotāja e-pasta adrese nav verificēta. Pārbaudiet iesūtni un veiciet norādītās darbības.</string>
     <string name="display_name_input_error">Jānorāda vārds</string>
     <string name="password_repeat_not_matching">Perolēm jāsakrīt</string>
+    <string name="appliance_costs_screen_open">Atvērs %1$s izmaksas katrai stundai</string>
 </resources>
