--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -61,6 +61,7 @@
     <string name="appliance_cycles_label">Power consumption cycles</string>
     <string name="appliance_color_label">Color label</string>
     <string name="appliance_color_selection_dialog_open">Open appliance color selection dialog</string>
+    <string name="appliance_costs_screen_open">Open appliance "%1$s" costs by hour</string>
     <string name="units_minutes" translatable="false">min</string>
     <string name="units_watts" translatable="false">W</string>
     <string name="add">Add</string>
