--- a/app/src/main/res/values-lv/strings.xml
+++ b/app/src/main/res/values-lv/strings.xml
@@ -90,4 +90,5 @@
     <string name="user_delete_confirmation">Vai tiešām vēlaties dzēst lietotāja kontu un ar to saistītos iestatījumus? Iespējams, jums vēlreiz vajadzēs apstiprināt savu lietotājvārdu un paroli.</string>
     <string name="password_input_dialog_title">Parole</string>
     <string name="password_input_dialog_text">Vēlreiz jāievada lietotāja %1$s parole, lai veiktu nākamo darbību</string>
+    <string name="user_not_deleted">Lietotājs %1$s netika dzēsts</string>
 </resources>
