--- a/app/src/main/res/values-lv/strings.xml
+++ b/app/src/main/res/values-lv/strings.xml
@@ -83,6 +83,8 @@
     <string name="login_register_with_email">Reģistrēties ar e-pastu</string>
     <string name="display_name_input_label">Vārds</string>
     <string name="email_not_verified">Lietotāja e-pasta adrese nav verificēta. Pārbaudiet iesūtni un veiciet norādītās darbības.</string>
+    <string name="email_verification_sent">e-pasta adreses apstiprinājuma pieprasījums nosūtīts uz "%1$s"</string>
+    <string name="email_verification_button_text">Verificēt!</string>
     <string name="display_name_input_error">Jānorāda vārds</string>
     <string name="password_repeat_not_matching">Perolēm jāsakrīt</string>
     <string name="appliance_costs_screen_open">Atvērs %1$s izmaksas katrai stundai</string>
