Login nav graph

--- a/app/src/main/res/values-lv/strings.xml
+++ b/app/src/main/res/values-lv/strings.xml
@@ -71,7 +71,9 @@
     <string name="password_input_label">Parole</string>
     <string name="login_email_button">Pieslēgties ar e-pastu</string>
     <string name="login_google_button">Pieslēgties ar Google</string>
+    <string name="login_register_with_google">Reģistrēties ar Google kontu</string>
     <string name="login_fail">Neizdevās pieslēgties</string>
+    <string name="login_user_created">Izveidots jauns lietotāja konts!</string>
     <string name="password_reset_screen_title">Paroles atiestatīšana</string>
     <string name="password_reset_button">Pieprasīt paroles atiestatīšanu</string>
     <string name="navigate_to_password_reset">Aizmirsta parole?</string>
