anonymous user settings

--- a/app/src/main/res/values-lv/strings.xml
+++ b/app/src/main/res/values-lv/strings.xml
@@ -57,6 +57,7 @@
     <string name="market_zone_name">Cenu reģions</string>
     <string name="vat_amount">PVN likme</string>
     <string name="market_zone_select">Izvēlieties reģionu</string>
+    <string name="market_zone_select_anonymous">Izvēlēties reģionu, lai iespējotu elektrības izmaksu aprēķinu</string>
     <string name="drag_handle">Pārvietot</string>
     <string name="view_appliance">Skatīt iekārtu</string>
     <string name="create_new">Izveidot jaunu</string>
