--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -94,6 +94,10 @@
     <string name="choose_appliance_title">Choose Appliance!</string>
     <string name="user_defined">User defined</string>
     <string name="predefined">Predefined</string>
+    <string name="about_title">About</string>
+    <string name="about_menu_item">About</string>
+    <string name="about_version_name">Version: %1$s</string>
+    <string name="about_version_code">Release code: %1$s</string>
     <plurals name="prices_retrieved">
         <item quantity="one">%1$d price retrieved</item>
         <item quantity="other">%1$d prices retrieved</item>
